examples/test/testpolicy11143.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11143
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key19: value3
      key38: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value29
          key44: value11
          key48: value44
      podSelector:
        matchLabels:
          key15: value4
          key46: value16
